--- a/assets/create.html
+++ b/assets/create.html
@@ -80,7 +80,7 @@
 	</div>
 
 	<input type="hidden" name="state" value="hidden">
-	<input type="hidden" value="dynamic" name="type" id="chaltype">
+	<input type="hidden" value="tweetnamic" name="type" id="chaltype">
 
 	<div class="form-group">
 		<button class="btn btn-primary float-right create-challenge-submit" type="submit">Create</button>
