Adapted create.html

--- a/assets/create.html
+++ b/assets/create.html
@@ -39,5 +39,5 @@
 {% endblock %}
 
 {% block type %}
-<input type="hidden" value="dynamic" name="type" id="chaltype">
+<input type="hidden" value="tweetnamic" name="type" id="chaltype">
 {% endblock %}
